--- a/db/package.json
+++ b/db/package.json
@@ -14,6 +14,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.4.11"
+    "mongodb": "^4.6.0",
+    "mongoose": "^5.13.14",
+    "nodemon": "^2.0.16"
   }
 }
