--- a/taskManager/package.json
+++ b/taskManager/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bcryptjs": "^2.4.3",
     "bulma": "^0.7.4",
     "core-js": "^2.5.4",
     "is-number": "^7.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.4",
     "rxjs": "~6.3.3",
     "sass": "^1.51.0",
     "tslib": "^1.14.1",
